# kiln

./: .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.vxworks  MODULE.bazel  PLAN-assert-invalid.md  PLAN-assert-malformed.md  PLAN-element-segments.md  README.md  allowed-unsafe.toml  claims.yaml  clippy.toml  cspell.json  feature-model.yaml  flake.nix  memory_budget.toml.example  requirements.toml  rivet.yaml  rustfmt.toml  spec-suite.json  tool-versions.toml
benchmarks/executor-comparison/: .gitignore  Cargo.toml
cargo-kiln/: Cargo.toml  README.md
cargo-kiln/src/: main.rs  test_config.rs  testing.rs
cargo-kiln/tests/: integration_tests.rs
kiln-async/: Cargo.toml
kiln-async/benches/: executor_comparison.rs  scheduler_baseline.rs
kiln-async/src/: config.rs  error_context.rs  intrinsics.rs  kani_proofs.rs  lib.rs  ready.rs  stream.rs  task.rs  waitable.rs
kiln-builtins/: Cargo.toml
kiln-builtins/src/: lib.rs
kiln-component/: Cargo.toml  README.md
kiln-component/benches/: README.md  execution_benchmarks.rs  kiln_allocator_benchmarks.rs  zero_cost_validation.rs
kiln-component/examples/: README.md  agent_performance_comparison.rs  async_features_demo.rs  canonical_realloc_example.rs  component_info_simple.rs  component_model_async_example.rs  interceptor_example.rs  real_world_integration.rs  unified_agent_demo.rs
kiln-component/fuzz/: Cargo.toml  README.md
kiln-component/src/: adapter.rs  agent_registry.rs  blast_zone.rs  borrowed_handles.rs  bounded_component_infra.rs  bounded_resource_management.rs  call_context.rs  canonical_executor.rs  cross_component_calls.rs  cross_component_communication.rs  cross_component_resource_sharing.rs  error_context_builtins.rs  error_format.rs  execution.rs  execution_engine.rs  export.rs  export_map.rs  fixed_length_lists.rs  foundation_stubs.rs  generative_types.rs  handle_representation.rs  host.rs  host_integration.rs  import.rs  import_map.rs  instance.rs  instantiation.rs  lib.rs  memory_layout.rs  memory_limits.rs  memory_table_management.rs  namespace.rs  no_alloc.rs  parser.rs  parser_integration.rs  platform_component.rs  platform_stubs.rs  post_return.rs  prelude.rs  resource_limits_loader.rs  (+14 more)
kiln-component/tests/: README_SAFETY_CRITICAL_TESTS.md  async_features_integration_tests.rs  canonical_abi_tests.rs  component_model_integration_tests.rs  direct_export_arity_tests.rs  fuel_async_integration_tests.rs  integration_tests.rs  library_api_panic_contract_tests.rs  memory_tests_moved.rs  no_alloc_tests.rs  no_std_async_tests.rs  no_std_test_reference.rs  parser_test_reference.rs  phase2_integration_tests.rs  phase3_integration_tests.rs  registry_tests.rs  resource_lifecycle_tests.rs  resource_management_tests.rs  rustfmt_crash_tests.rs  safety_critical_capacity_tests.rs  safety_critical_concurrency_tests.rs  safety_critical_error_handling_tests.rs  safety_critical_feature_flag_tests.rs  safety_critical_integration_tests.rs  safety_critical_memory_budget_tests.rs  start_function_tests.rs  type_conversion_tests.rs
kiln-debug/: Cargo.toml  README.md
kiln-debug/examples/: minimal_debug_example.rs
kiln-debug/src/: abbrev.rs  bounded_debug_infra.rs  cursor.rs  error.rs  file_table.rs  info.rs  lib.rs  line_info.rs  memory_profiling.rs  parameter.rs  platform_debug.rs  realtime_monitor.rs  runtime_api.rs  runtime_break.rs  runtime_memory.rs  runtime_step.rs  runtime_vars.rs  strings.rs  types.rs  wit_aware_debugger.rs  wit_source_map.rs
kiln-debug/tests/: complete_debug_tests.rs  debug_info_analysis.rs  feature_tests.rs  runtime_debug_tests.rs  verify_compilation.rs
kiln-decoder/: Cargo.toml  README.md
kiln-decoder/examples/: component_binary_parser_demo.rs  decode_example.rs  memory_optimization_demo.rs  safe_memory_usage.rs  section_error_demo.rs
kiln-decoder/src/: bounded_decoder_infra.rs  branch_hint_section.rs  custom_section_handler.rs  decoder.rs  decoder_no_alloc.rs  format_detection_tests.rs  lazy_detection.rs  lib.rs  memory_limits.rs  memory_optimized.rs  optimized_string.rs  prelude.rs  resource_limits_section.rs  sections.rs  sections_no_std.rs  simple_types.rs  streaming_decoder.rs  streaming_validation.rs  streaming_validator.rs  toml_config.rs  unified_loader.rs  utils.rs
kiln-decoder/tests/: basic_memory_tests.rs  call_indirect_tests.rs  component_integration_tests.rs  component_name_tests.rs  component_values_tests.rs  decoder_tests.rs  memory_optimization_tests.rs  memory_optimization_unit_tests.rs  no_std_test_reference.rs  parser_test_reference.rs  test_component_sections.rs
kiln-format/: Cargo.toml  README.md
kiln-format/examples/: debug_bounded_wit.rs  simple_wit_ast_demo.rs
kiln-format/src/: ast.rs  ast_simple.rs  binary.rs  bounded_format_infra.rs  bounded_wit_parser.rs  canonical.rs  component.rs  component_conversion.rs  compression.rs  conversion.rs  error.rs  incremental_parser.rs  interface_demo.rs  lib.rs  lsp_server.rs  memory_limits.rs  module.rs  prelude.rs  pure_format_types.rs  runtime_bridge.rs  runtime_connector.rs  safe_memory.rs  section.rs  streaming.rs  type_store.rs  types.rs  validation.rs  valtype_builder.rs  version.rs  wit_parser.rs  wit_parser_bounded.rs  wit_parser_complex.rs  wit_parser_enhanced.rs  wit_parser_traits.rs  wit_parser_types.rs
kiln-format/tests/: ast_tests.rs  format_proofs.rs  no_std_test_reference.rs  parser_test_reference.rs
kiln-host/: Cargo.toml  README.md
kiln-host/src/: bounded_host_infra.rs  bounded_host_integration.rs  builder.rs  callback.rs  function.rs  host.rs  lib.rs  memory_limits.rs  prelude.rs
kiln-host/tests/: no_std_test_reference.rs
kiln-instructions/: Cargo.toml  README.md
kiln-instructions/examples/: arithmetic_ops_demo.rs  comparison_ops_demo.rs  control_flow_demo.rs  (+3 more)
kiln-intercept/: Cargo.toml  README.md
kiln-logging/: Cargo.toml  README.md
kiln-platform/: Cargo.toml  README.md
kiln-runtime/: Cargo.toml  README.md
kiln-synth-bridge/: Cargo.toml
kiln-tests/: Cargo.toml  README.md
kilnd/: Cargo-multi.toml  Cargo.toml  README.md
(+908 files in other folders)
