[package]
name = "kiln-builtins"
version = "0.1.0"
edition = "2024"
description = "Runtime builtins for synth-compiled WebAssembly on embedded targets"
license = "MIT"

# rlib for workspace builds/tests; use --crate-type staticlib for ARM targets:
# cargo rustc -p kiln-builtins --target thumbv7em-none-eabi --release -- --crate-type staticlib
[lib]
crate-type = ["rlib"]

[dependencies]

[features]
default = []
