[package]
name = "kiln-decoder"
version.workspace = true
edition.workspace = true
description = "WebAssembly module decoder for Kiln runtime"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "decoder", "parser", "runtime"]
categories = ["wasm", "parsing", "no-std", "embedded"]

[lints]
workspace = true

[dependencies]
# Error handling
kiln-error = { workspace = true, default-features = false }
# Format handling
kiln-format = { workspace = true, default-features = false }
# Foundation library 
kiln-foundation = { workspace = true, default-features = false }

# Core dependencies
log = { version = "0.4", optional = true }
# WAT parsing (for testing)
wat = { version = "1.232.0", optional = true }
# TOML configuration (for tooling)
toml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.6"
tempfile = "3.27"
proptest = "1.4"
hex = "0.4"
wat = "1.232.0"

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["kiln-format/std", "kiln-foundation/std", "kiln-foundation/kiln-allocator", "dep:toml", "dep:serde"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []

# Platform profile features (propagate to kiln-foundation)
embedded-small = ["kiln-foundation/embedded-small"]
embedded-medium = ["kiln-foundation/embedded-medium"]

# Allocation tracing for debugging
allocation-tracing = ["kiln-foundation/allocation-tracing"]

# Tracing support
tracing = ["kiln-foundation/tracing"]

# Allocation support for no_std environments
alloc = ["kiln-foundation/alloc", "kiln-format/alloc"]
optimize = []

# Safety level presets using capability-based features
qm = ["kiln-foundation/dynamic-allocation", "kiln-format/qm"]
asil-a = ["kiln-foundation/bounded-collections", "kiln-format/asil-a"]
asil-b = ["kiln-foundation/bounded-collections", "kiln-format/asil-b"]
asil-c = ["kiln-foundation/static-memory-safety", "kiln-format/asil-c"]
asil-d = ["kiln-foundation/asil-d", "kiln-format/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

wat = ["dep:wat", "std"]

# Component Model features
component-model-core = ["kiln-format/component-model-core"]
component-model-values = ["kiln-format/component-model-values"]
component-model-resources = ["kiln-format/component-model-resources"]
component-model-fixed-lists = ["kiln-format/component-model-fixed-lists"]
component-model-namespaces = ["kiln-format/component-model-namespaces"]
component-model-all = [
    "component-model-core",
    "component-model-values",
    "component-model-resources",
    "component-model-fixed-lists",
    "component-model-namespaces"
]

# Type conversion feature
conversion = ["kiln-format/conversion"]

# Disable panic handler for library builds to avoid conflicts
kani = []


