[package]
name = "kiln-format"
version.workspace = true
edition.workspace = true
description = "WebAssembly format handling for Kiln"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "format", "binary", "no-std"]
categories = ["wasm", "parsing", "data-structures", "no-std", "embedded"]

[dependencies]
kiln-error = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false }

[dev-dependencies]
# For property testing
proptest = "1.0.0"

# For formal verification (moved to dependencies with optional flag)
[dependencies.kani-verifier]
version = "0.62.0"
optional = true

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["kiln-foundation/std", "kiln-foundation/kiln-allocator"]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = ["kiln-foundation/alloc"]
optimize = ["kiln-foundation/optimize"]

# Safety level presets using capability-based features
qm = ["kiln-foundation/dynamic-allocation"]
asil-a = ["kiln-foundation/bounded-collections"]
asil-b = ["kiln-foundation/bounded-collections"]
asil-c = ["kiln-foundation/static-memory-safety"]
asil-d = ["kiln-foundation/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

# The 'kani' feature enables formal verification with the Kani verifier
kani = ["dep:kani-verifier"]

# Component Model features
component-model-core = ["kiln-foundation/component-model-core"]
component-model-values = ["kiln-foundation/component-model-values"]
component-model-resources = ["kiln-foundation/component-model-resources"]
component-model-canonical = []
component-model-fixed-lists = ["kiln-foundation/component-model-fixed-lists"]
component-model-error-context = ["kiln-foundation/component-model-error-context"]
component-model-async = ["kiln-foundation/component-model-async"]
component-model-threading = ["kiln-foundation/component-model-threading"]
component-model-namespaces = ["kiln-foundation/component-model-namespaces"]

# Grouped features
component-model-all = [
    "component-model-core",
    "component-model-values",
    "component-model-resources",
    "component-model-canonical",
    "component-model-fixed-lists",
    "component-model-error-context",
    "component-model-async",
    "component-model-threading",
    "component-model-namespaces"
]

# Type conversion feature
conversion = []


# LSP (Language Server Protocol) support
lsp = ["std"]

# WIT parsing support for no_std environments
wit-parsing = []

# Disable panic handler for library builds to avoid conflicts

[lints]
workspace = true

# Configuration for Kani verification
[package.metadata.kani]
default-unwind = 2