[package]
name = "kiln-instructions"
version.workspace = true
edition.workspace = true
description = "WebAssembly instruction implementations for the Kiln runtime"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "instructions", "interpreter", "no-std"]
categories = ["wasm", "emulators", "no-std", "embedded"]

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = [
    "kiln-foundation/std",
    "kiln-sync/std",
    "kiln-math/std",
    "dep:log"]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = ["kiln-foundation/alloc", "kiln-math/alloc"]
optimize = ["kiln-foundation/optimize"]

# Safety level presets using capability-based features
qm = ["kiln-foundation/dynamic-allocation", "kiln-math/qm"]
asil-a = ["kiln-foundation/bounded-collections", "kiln-math/asil-a"]
asil-b = ["kiln-foundation/bounded-collections", "kiln-math/asil-b"]
asil-c = ["kiln-foundation/static-memory-safety", "kiln-math/asil-c"]
asil-d = ["kiln-foundation/asil-d", "kiln-math/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

kani = []


[dependencies]
kiln-error = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false }
kiln-sync = { workspace = true, default-features = false }
kiln-math = { workspace = true, default-features = false }
log = { version = "0.4", optional = true }

# No-std support

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true 