[package]
name = "kiln-intercept"
version.workspace = true
edition.workspace = true
description = "Host interception for WebAssembly Runtime (Kiln)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kiln-intercept"
keywords = ["wasm", "webassembly", "runtime", "interception"]
categories = ["wasm", "no-std"]

[dependencies]
kiln-error = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false }
kiln-sync = { workspace = true, default-features = false }

# Optional dependencies
log = { version = "0.4", optional = true }
# For formal verification when 'kani' feature is enabled
kani-verifier = { version = "0.62.0", optional = true }

[dev-dependencies]
chrono = "0.4"  # For examples
pretty_assertions = "1.4.0"

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["kiln-foundation/std", "kiln-sync/std", "log"]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = ["kiln-foundation/alloc"]
optimize = ["kiln-foundation/optimize"]

# Safety level presets using capability-based features
qm = ["kiln-foundation/dynamic-allocation"]
asil-a = ["kiln-foundation/bounded-collections"]
asil-b = ["kiln-foundation/bounded-collections"]
asil-c = ["kiln-foundation/static-memory-safety"]
asil-d = ["kiln-foundation/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

kani = ["dep:kani-verifier"]


[lints]
workspace = true

# Configuration for Kani verification
# This will only be used when running `cargo kani`
[package.metadata.kani]
enabled-checks = ["assertion", "overflow"]
default-unwind = 2 