[package]
name = "kiln-logging"
version.workspace = true
edition.workspace = true
description = "Logging infrastructure for the WebAssembly Runtime (Kiln)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kiln-logging"
keywords = ["wasm", "webassembly", "runtime", "logging", "component-model"]
categories = ["wasm", "no-std", "development-tools::debugging"]

[lints]
workspace = true

[dependencies]
kiln-error = { workspace = true, default-features = false }
kiln-host = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false }
# No-std support (removed invalid alloc dependency)

# Optional dependencies
log = { version = "0.4", optional = true }

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["kiln-host/std", "kiln-foundation/std", "log"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []

# Allocation support for no_std environments
alloc = ["kiln-foundation/alloc", "kiln-host/alloc"]
kani = ["kiln-host/kani"]

# Safety level presets using capability-based features
qm = ["kiln-foundation/dynamic-allocation"]
asil-a = ["kiln-foundation/bounded-collections"]
asil-b = ["kiln-foundation/bounded-collections"]
asil-c = ["kiln-foundation/static-memory-safety"]
asil-d = ["kiln-foundation/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

# Disable panic handler for library builds to avoid conflicts

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] 