[package]
name = "kiln-runtime"
version.workspace = true
edition.workspace = true
description = "WebAssembly Component Model Runtime for Kiln"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kiln-runtime"
readme = "README.md"
keywords = ["wasm", "webassembly", "runtime", "component-model"]
categories = ["wasm", "no-std"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_macros = "allow"
missing_docs = "allow"
dead_code = "allow"
unreachable_patterns = "allow"

[lints.clippy]
# Core allows from workspace
needless_continue = "allow"
if_not_else = "allow"
needless_pass_by_value = "allow"
manual_let_else = "allow"
elidable_lifetime_names = "allow"
unused_self = "allow"
ptr_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
multiple_crate_versions = "allow"
semicolon_if_nothing_returned = "allow"
comparison_chain = "allow"
ignored_unit_patterns = "allow"
single_match_else = "allow"
needless_range_loop = "allow"
explicit_iter_loop = "allow"
bool_to_int_with_if = "allow"
match_same_arms = "allow"
match_like_matches_macro = "allow"
result_unit_err = "allow"
uninlined_format_args = "allow"
large_enum_variant = "allow"
must_use_candidate = "allow"
new_without_default = "allow"
used_underscore_binding = "allow"
wildcard_in_or_patterns = "allow"
map_unwrap_or = "allow"
ref_option = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
needless_borrow = "allow"
default_trait_access = "allow"
init_numbered_fields = "allow"
field_reassign_with_default = "allow"
op_ref = "allow"
should_implement_trait = "allow"
match_wildcard_for_single_variants = "allow"
reserve_after_initialization = "allow"
needless_late_init = "allow"
empty_line_after_doc_comments = "allow"
int_plus_one = "allow"
extra_unused_lifetimes = "allow"
unnecessary_cast = "allow"
manual_range_contains = "allow"
single_match = "allow"
question_mark = "allow"
collapsible_if = "allow"
redundant_closure = "allow"
iter_nth = "allow"
clone_on_copy = "allow"
map_identity = "allow"
range_plus_one = "allow"
arc_with_non_send_sync = "allow"
collapsible_match = "allow"
explicit_auto_deref = "allow"
useless_conversion = "allow"
or_fun_call = "allow"
manual_ok_or = "allow"
explicit_counter_loop = "allow"
unwrap_or_default = "allow"
get_first = "allow"
range_minus_one = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
manual_range_patterns = "allow"
unnecessary_map_or = "allow"
manual_unwrap_or_default = "allow"

[dependencies]
kiln-error = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false }
kiln-format = { workspace = true, default-features = false }
kiln-sync = { workspace = true, default-features = false }
kiln-decoder = { workspace = true, default-features = false }
kiln-instructions = { workspace = true, default-features = false }
kiln-host = { workspace = true, default-features = false, optional = true }
kiln-intercept = { workspace = true, default-features = false }
kiln-platform = { workspace = true, default-features = false, optional = true }
kiln-debug = { workspace = true, default-features = false, optional = true }
kiln-wasi = { workspace = true, default-features = false, optional = true }

# No-std support (removed invalid alloc dependency)

[features]
default = ["std"] # Enable std by default for platform compatibility
# Binary choice: std OR no_std (no alloc middle ground)
std = [
    "kiln-decoder/std",
    "kiln-format/std",
    "dep:kiln-host",
    "kiln-host?/std",
    "kiln-instructions/std",
    "kiln-intercept/std",
    "dep:kiln-platform",
    "kiln-sync/std",
    "kiln-foundation/std",
    "kiln-foundation/platform-memory",
    "kiln-foundation/tracing"]

# Tracing support for debugging complex execution flows
tracing = ["kiln-foundation/tracing"]

# WASI support - uses kiln-wasi for WASI host function implementations
wasi = ["std", "dep:kiln-wasi", "kiln-wasi?/std", "kiln-wasi?/preview2", "kiln-wasi?/wasi-clocks", "kiln-wasi?/wasi-io", "kiln-wasi?/wasi-cli"]

# Allocation support for no_std environments (DEPRECATED - use bounded-allocation instead)
alloc = [
    "kiln-foundation/bounded-allocation",
    "kiln-format/alloc",
    "kiln-host?/alloc",
    "kiln-instructions/alloc",
    "kiln-intercept/alloc"]
# Debug support features
debug = ["dep:kiln-debug", "kiln-debug/line-info"]
# Debugger callback support - enables profiling and debugging via RuntimeDebugger trait
debugger = ["std", "dep:kiln-debug", "kiln-debug/runtime-traits"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []
optimize = [
    "kiln-foundation/optimize",
    # "kiln-decoder/optimize",
    "kiln-instructions/optimize",
    "kiln-host?/optimize",
    "kiln-intercept/optimize"]

# ============================================================================
# Four-Layer Safety Architecture Feature Propagation
# ============================================================================

# Layer 1: Memory Management Strategy (mutually exclusive)
static-allocation = ["kiln-foundation/static-allocation"]
bounded-allocation = ["kiln-foundation/bounded-allocation"]
managed-allocation = ["kiln-foundation/managed-allocation"]
std-allocation = ["kiln-foundation/std-allocation"]

# Layer 3: Safety Standards (mutually exclusive within project)
iso-26262 = ["kiln-foundation/iso-26262"]
do-178c = ["kiln-foundation/do-178c"]
iec-61508 = ["kiln-foundation/iec-61508"]
iec-62304 = ["kiln-foundation/iec-62304"]
en-50128 = ["kiln-foundation/en-50128"]
iso-25119 = ["kiln-foundation/iso-25119"]

# Layer 4: Safety Integrity Levels (dependent on standard)
# ISO 26262 - Automotive
qm = ["kiln-foundation/qm"]
asil-a = ["kiln-foundation/asil-a"]
asil-b = ["kiln-foundation/asil-b"]
asil-c = ["kiln-foundation/asil-c"]
asil-d = ["kiln-foundation/asil-d"]

# DO-178C - Aerospace
dal-e = ["kiln-foundation/dal-e"]
dal-d = ["kiln-foundation/dal-d"]
dal-c = ["kiln-foundation/dal-c"]
dal-b = ["kiln-foundation/dal-b"]
dal-a = ["kiln-foundation/dal-a"]

# IEC 61508 - Industrial
sil-1 = ["kiln-foundation/sil-1"]
sil-2 = ["kiln-foundation/sil-2"]
sil-3 = ["kiln-foundation/sil-3"]
sil-4 = ["kiln-foundation/sil-4"]

# IEC 62304 - Medical
class-a = ["kiln-foundation/class-a"]
class-b = ["kiln-foundation/class-b"]
class-c = ["kiln-foundation/class-c"]

# EN 50128 - Railway
railway-sil-0 = ["kiln-foundation/railway-sil-0"]
railway-sil-1 = ["kiln-foundation/railway-sil-1"]
railway-sil-2 = ["kiln-foundation/railway-sil-2"]
railway-sil-3 = ["kiln-foundation/railway-sil-3"]
railway-sil-4 = ["kiln-foundation/railway-sil-4"]

# ISO 25119 - Agricultural
agpl-a = ["kiln-foundation/agpl-a"]
agpl-b = ["kiln-foundation/agpl-b"]
agpl-c = ["kiln-foundation/agpl-c"]
agpl-d = ["kiln-foundation/agpl-d"]
agpl-e = ["kiln-foundation/agpl-e"]

# Legacy compatibility features (DEPRECATED - use four-layer architecture above)
safe-memory = ["iso-26262", "asil-b"]
safety-asil-b = ["iso-26262", "asil-b"]
safety-asil-c = ["iso-26262", "asil-c"]
safety-asil-d = ["iso-26262", "asil-d"]

# Platform features - properly abstracted for ASIL compliance
# Platform sync enables native platform synchronization primitives
platform-sync = ["dep:kiln-platform", "kiln-platform?/std"]
# Specific platform support (requires platform-sync)
platform-macos = ["platform-sync", "kiln-platform?/platform-macos"]
platform-linux = ["platform-sync", "kiln-platform?/platform-linux"]
platform-qnx = ["platform-sync", "kiln-platform?/platform-qnx"]
platform-embedded = ["dep:kiln-platform"] # Minimal platform support
helper-mode = ["dep:kiln-platform", "kiln-platform?/helper-mode"]

# Verification features
kani = []
kani-verifier = []

[dev-dependencies]
serial_test = "3.4"
