[package]
name = "kiln-tests"
version = "0.2.0"
edition = "2021"

[features]
default = ["std"]
std = []
no_std = []
safety-asil-b = []
safety-asil-c = ["safety-asil-b"]
safety-asil-d = ["safety-asil-c"]


[lib]
name = "kiln_tests"
path = "integration/lib.rs"

[dependencies]
# Core Kiln dependencies for testing
kiln-component = { path = "../kiln-component", features = ["std"] }
kiln-decoder = { path = "../kiln-decoder", features = ["std"] }
kiln-format = { path = "../kiln-format", features = ["std"] }
kiln-foundation = { path = "../kiln-foundation", features = ["std"] }
kiln-host = { path = "../kiln-host", features = ["std"] }
kiln-instructions = { path = "../kiln-instructions", features = ["std"] }
kiln-platform = { path = "../kiln-platform", features = ["std"] }
kiln-runtime = { path = "../kiln-runtime", features = ["std"] }
kiln-sync = { path = "../kiln-sync", features = ["std"] }
kiln-test-registry = { path = "../kiln-test-registry", features = ["std"] }

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
once_cell = "1.19"
tempfile = "3.8"
wasmparser = "0.207"
wat = "1.232.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"